{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "e1d6bcae-ee3c-47b1-8e72-5dd1a34fb494",
            "actions": [
                {
                    "name": "EnableLeftRayInteractor",
                    "type": "Button",
                    "id": "4be6cdb4-2b8b-4a09-9ff5-5e6411a56d8e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "EnableRightRayInteractor",
                    "type": "Button",
                    "id": "d2f8bb75-7edc-4ecc-a3f7-0626dc43f5c0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "bab18374-b113-4e30-9e6a-daed56fdadf3",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EnableLeftRayInteractor",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9012c2b1-6d65-46b5-9129-10c5c2375381",
                    "path": "<XRController>{LeftHand}/primaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EnableLeftRayInteractor",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1f0f334e-9f1d-4738-9018-c09bd9981083",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EnableRightRayInteractor",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2878baa4-7a27-4afa-9717-c92f440c893a",
                    "path": "<XRController>{RightHand}/primaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EnableRightRayInteractor",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}